--- a/authentication/static/auth/css/login.css
+++ b/authentication/static/auth/css/login.css
@@ -57,3 +57,12 @@
 .login-container a:hover {
     text-decoration: underline;
 }
+
+.error-message {
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 1rem;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    border: 1px solid #f5c6cb;
+}
