--- a/event/templates/events_list.html
+++ b/event/templates/events_list.html
@@ -16,8 +16,7 @@
             <div class="event-details">
                 <h3 class="event-title">{{ event.title }}</h3>
                 <p class="event-description">{{ event.content }}</p>
-                <p class="event-date"><strong>Début:</strong> {{ event.start_date|date:"d F Y" }}</p>
-                <p class="event-date"><strong>Fin:</strong> {{ event.end_date|date:"d F Y" }}</p>
+                <p class="event-date"><strong>Du</strong> {{ event.start_date|date:"d F Y" }} <strong>au</strong> {{ event.end_date|date:"d F Y" }}</p>
             </div>
         </li>
         {% endfor %}
