--- a/blog/static/blog/css/flux.css
+++ b/blog/static/blog/css/flux.css
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    color: black;
 }
 
 .flux-article-meta {
@@ -52,7 +53,7 @@
     color: #888;
     display: flex;
     align-items: center;
-    margin-bottom: 1rem;
+    padding-bottom: 1rem;
 }
 
 .flux-article-meta .icon {
@@ -67,20 +68,13 @@
     color: #333;
 }
 
-.flux-article-title p {
+.flux-article-title {
     color: #333;
     text-decoration: none;
 }
 
-.flux-article-title p:hover {
+.flux-article-title:hover {
     color: #B2A1EA;
-}
-
-.flux-article-excerpt {
-    color: #555;
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    line-height: 1.6;
 }
 
 
