--- a/staticfiles/event/css/events_list.css
+++ b/staticfiles/event/css/events_list.css
@@ -4,10 +4,10 @@
     align-items: center;
     margin: 0 auto;
 }
+
 .event-list-title {
     text-align: center;
     font-size: 2rem;
-    color: #333;
     margin-bottom: 2rem;
     padding: 0 2rem;
 }
@@ -20,7 +20,8 @@
     flex-direction: column;
     gap: 2rem;
     padding: 0 2rem;
-    width: 800px;
+    width: 100%;
+    max-width: 800px;
 }
 
 .event-item {
@@ -28,7 +29,7 @@
     background-color: white;
     border: 0.1px solid #B2A1EA;
     border-radius: 10px;
-    box-shadow:10px 10px 10px -5px rgba(94, 23, 235, 0.1);
+    box-shadow: 10px 10px 10px -5px rgba(94, 23, 235, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     padding: 1rem;
@@ -36,7 +37,6 @@
     margin: 0 1rem;
     max-width: 800px;
     max-height: 300px;
-
 }
 
 .event-item:hover {
@@ -46,6 +46,7 @@
 
 .event-image {
     flex: 1;
+    max-width: 250px;
 }
 
 .event-image img {
@@ -89,8 +90,19 @@
 }
 
 @media (max-width: 768px) {
+    .event-list {
+        padding: 0 1rem;
+    }
+
     .event-item {
         flex-direction: column;
+        max-width: 100%;
+        max-height: none;
+    }
+
+    .event-image {
+        max-width: 100%;
+        height: 200px;
     }
 
     .event-details {
