update link target

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,9 +38,9 @@
 
 <footer>
     <div class="footer-content">
-        <a href="https://www.linkedin.com/in/clementmarcel/">linkedin</a>
+        <a href="https://www.linkedin.com/in/clementmarcel/" target="_blank">linkedin</a>
         <a href="{% url 'contact' %}">contact</a>
-        <a href="https://github.com/lecramc">github</a>
+        <a href="https://github.com/lecramc" target="_blank">github</a>
     </div>
 </footer>
 </body>
