--- a/staticfiles/event/css/events_list.css
+++ b/staticfiles/event/css/events_list.css
@@ -47,6 +47,7 @@
 .event-image {
     flex: 1;
     max-width: 250px;
+    max-height: 250px;
 }
 
 .event-image img {
@@ -82,7 +83,6 @@
 
 .event-date {
     font-size: 0.9rem;
-    color: #888;
 }
 
 .event-date strong {
